traefik/ingress-routes/k3s-dashboard-ingress.yml
---
# Secure entry point
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k3s-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.containo.us/middleware: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k3s.$BASE_DOMAIN`)
      kind: Rule
      # BasicAuth interferes with kubernetes dashboard authentication.
      # Instead of Log Out, it will show Logged in with auth header.
      #middlewares:
      # - name: k3s-dashboard-basicauth
      #   namespace: kubernetes-dashboard
      services:
        - kind: Service
          name: kubernetes-dashboard
          namespace: kubernetes-dashboard
          scheme: https
          port: 443
          serversTransport: k3s-dashboard-transport
  tls:
    secretName: k3s-${BASE_DOMAIN_DASH}-staging-tls

---
# Middleware for basic auth
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: k3s-dashboard-basicauth
  namespace: kubernetes-dashboard
spec:
  basicAuth:
    secret: k3s-dashboard-basicauth-secret
